--- a/index.css
+++ b/index.css
@@ -215,7 +215,9 @@
     width: fit-content;
     border-radius: 5px;
 }
-
+.searchSuggestion{
+    position: relative;
+}
 
 
 /* MEDIA QURIES */
@@ -273,7 +275,9 @@
         width: 100%;
         margin: auto 2rem;
     }
-
+        .suggestion{
+        height: 159px;
+    }
 
 }
 
@@ -361,7 +365,11 @@
     .suggestion-list{
         gap: 2rem;
     }
+        .suggestion{
+        height: 110px;
+    }
 }
+
 
 /* LOADING ANIMATIONS */
 .loader{
