--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     place-content: center;
     background-color: var(--dark1);
     overflow: hidden;
+    user-select: none;
 }
 .wrapper { 
     position: relative;
